# hyper11playground

./: .travis.yml  Cargo.toml  LICENSE-APACHE  README.MD
examples/: certificate.p12  helloworld.rs  https.rs  json.rs  queryparam.rs  routing.rs  state.rs  staticfiles.rs
examples/static/: index.html
examples/static/style/: style.css
src/: body.rs  error.rs  handler.rs  lib.rs  prelude.rs  request.rs  response.rs  traits.rs
src/hyper_conversion/: mod.rs
src/request/: body.rs  mod.rs  params.rs
src/response/: mod.rs
src/router/: mod.rs
src/router/staticfile/: cache.rs  handler.rs  mod.rs
src/server/: mod.rs  protocol.rs  tester.rs
src/server/codec/: mod.rs
src/server/hyper/: mod.rs  protocol.rs
src/server/nohyper/: mod.rs
src/server/nohyper/codec/: mod.rs
tests/: state.rs
