[package]
name = "hyper11playground"
version = "0.1.0"
authors = ["Christian <krampenschiesser@gmail.com>"]

[features]
unstable = ["clippy"]

[dependencies]
clippy = {version = "*", optional = true}
hyper = "0.11"

tokio-tls = {version="0.1", features = ["tokio-proto"]}
native-tls = "0.1"
tokio-service = "0.1"
tokio-proto = "0.1"

futures = "0.1.14"
route-recognizer = "0.1"
url = "1.5.1"
serde = "1.0.10"
serde_json = "1.0.2"
log = "0.3.8"
env_logger = "0.4.3"

state = "0.3.1"

[dev-dependencies]
reqwest = "0.7.1"
