[package]
name = "rest_in_rust"
version = "0.1.0"
authors = ["Christian <krampenschiesser@gmail.com>"]
description = "Basic http1 server based on tokio and http crate"
#documentation = "https://docs.rs/rest_in_rust"
homepage = "https://github.com/krampenschiesser/rest_in_rust"
repository = "https://github.com/krampenschiesser/rest_in_rust"
readme = "README.md"
categories = ["http", "rest"]
keywords = ["http", "server", "rest", "tokio"]
license = "Apache/MIT"
exclude = [
  "examples/certificate.p12",
  ".travis.yml",
  "appveyor.yml"
]

[features]
unstable = ["clippy"]

[dependencies]
clippy = {version = "*", optional = true}

tokio-tls = {version="0.1", features = ["tokio-proto"]}
native-tls = "0.1"
tokio-service = "0.1"
tokio-proto = "0.1"
tokio-io = "0.1"
bytes = "0.4.5"
httparse = "1.2.3"
futures = "0.1"
futures-cpupool = "0.1"
route-recognizer = "0.1"
url = "1.5.1"
serde = "1.0.11"
serde_json = "1.0.2"
serde_derive = "1.0.11"
log = "0.3.8"

state = "0.3.1"
http = { git = 'https://github.com/carllerche/http' }

[dev-dependencies]
reqwest = "0.7.1" #should be in dev dependencies
env_logger = "0.4.3"
spectral = "0.6.0"

[badges]
appveyor = { repository = "https://github.com/krampenschiesser/rest_in_rust", branch = "master", service = "github" }
travis-ci = { repository = "https://github.com/krampenschiesser/rest_in_rust", branch = "master" }
